When counting new messages in the deskbar replicant, ignore messages that are in the Trash.

Fixes ticket #5401.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35458 a95241bf-73f2-0310-859d-f6bbb57e9c96